add system admin functions
